--- a/ForteTeeVee/Base.lproj/Main.storyboard
+++ b/ForteTeeVee/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="10109" systemVersion="15D21" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" initialViewController="thc-6S-ZOw">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="10109" systemVersion="15D21" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" initialViewController="eTm-xe-S9t">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10083"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -19,22 +19,23 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="black" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zxX-Vk-WI9">
                                 <rect key="frame" x="20" y="0.0" width="1245" height="1080"/>
+                                <inset key="scrollIndicatorInsets" minX="120" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9yb-QX-yhP">
-                                    <size key="itemSize" width="226" height="320"/>
+                                    <size key="itemSize" width="114" height="160"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScoreCell" id="D9G-fd-rJO" customClass="ScoreCell" customModule="ForteTeeVee" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="145" width="226" height="320"/>
+                                        <rect key="frame" x="0.0" y="145" width="114" height="160"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="226" height="320"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tpu-tb-llw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="226" height="320"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -69,29 +70,65 @@
             </objects>
             <point key="canvasLocation" x="-7783.5" y="-3221"/>
         </scene>
-        <!--Score page view controller-->
+        <!--Score view controller-->
         <scene sceneID="1cc-dR-68a">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="NQ9-Pq-V9P" userLabel="Score page view controller" customClass="ScoreViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="NQ9-Pq-V9P" userLabel="Score view controller" customClass="ScoreViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Title" id="e2T-oF-bDd"/>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AS9-uQ-H5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-7773" y="-1918"/>
         </scene>
+        <!--Item 2-->
+        <scene sceneID="Flv-qm-F1z">
+            <objects>
+                <viewController id="6dv-4J-UJm" customClass="SearchResultsViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IPc-Zu-IA3"/>
+                        <viewControllerLayoutGuide type="bottom" id="phh-YG-oCn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q0U-sS-6i4">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="zRg-JO-xfh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ivo-1L-Ncz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-10896" y="-1562"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="i14-fI-hzu">
+            <objects>
+                <tabBarController id="eTm-xe-S9t" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Hqk-hb-UnF">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="0.0"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="6dv-4J-UJm" kind="relationship" relationship="viewControllers" id="krA-SA-Bzx"/>
+                        <segue destination="thc-6S-ZOw" kind="relationship" relationship="viewControllers" id="CBl-fr-Ru5"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s4d-yz-pkc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-13640" y="-1554"/>
+        </scene>
         <!--Score Page View Controller-->
         <scene sceneID="e4m-32-76l">
             <objects>
-                <viewController storyboardIdentifier="ScorePageViewController" id="V32-hx-rCK" customClass="ScorePageViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ScorePageViewController" modalTransitionStyle="crossDissolve" id="V32-hx-rCK" customClass="ScorePageViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="vvO-7S-yTp"/>
                         <viewControllerLayoutGuide type="bottom" id="hre-jQ-DJV"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="xMr-jA-IcV">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="xMr-jA-IcV">
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="score_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="GNc-qP-BUq">
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="score_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="GNc-qP-BUq">
                                 <rect key="frame" x="20" y="20" width="1880" height="1040"/>
                             </imageView>
                         </subviews>
@@ -120,7 +157,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="re8-w2-WrZ" style="IBUITableViewCellStyleDefault" id="M7v-VD-zTh">
-                                <rect key="frame" x="0.0" y="199" width="634" height="66"/>
+                                <rect key="frame" x="0.0" y="199" width="594" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="M7v-VD-zTh" id="DKD-B8-hOR">
                                     <rect key="frame" x="0.0" y="0.0" width="618" height="66"/>
@@ -171,10 +208,11 @@
             </objects>
             <point key="canvasLocation" x="-9170" y="-4490"/>
         </scene>
-        <!--Menu Split View Controller-->
+        <!--Item-->
         <scene sceneID="Huj-NT-mNq">
             <objects>
                 <splitViewController id="thc-6S-ZOw" customClass="MenuSplitViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="k37-VI-Qdf"/>
                     <connections>
                         <segue destination="nM1-dv-NL8" kind="relationship" relationship="masterViewController" id="01d-zs-Gft"/>
                         <segue destination="DOL-hG-1iv" kind="relationship" relationship="detailViewController" id="1o6-w4-3xJ"/>
@@ -182,7 +220,7 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uag-qj-xBq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-11027" y="-3939"/>
+            <point key="canvasLocation" x="-11107" y="-3779"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9zn-zt-HLm">
@@ -207,6 +245,6 @@
         <image name="score_placeholder" width="768" height="1004"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="z6V-ES-lvg"/>
+        <segue reference="1o6-w4-3xJ"/>
     </inferredMetricsTieBreakers>
 </document>
