Add search and re-enable interaction

--- a/ForteTeeVee/Base.lproj/Main.storyboard
+++ b/ForteTeeVee/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Decade Score Collection View Controller-->
         <scene sceneID="Jhb-QM-WSQ">
             <objects>
-                <viewController id="JGm-st-udW" customClass="DecadeScoreCollectionViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DecadeScoreCollectionViewController" id="JGm-st-udW" customClass="DecadeScoreCollectionViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="lTk-rb-d4t"/>
                         <viewControllerLayoutGuide type="bottom" id="Dur-3F-TTB"/>
@@ -80,24 +80,6 @@
             </objects>
             <point key="canvasLocation" x="-7773" y="-1918"/>
         </scene>
-        <!--Item 2-->
-        <scene sceneID="Flv-qm-F1z">
-            <objects>
-                <viewController id="6dv-4J-UJm" customClass="SearchResultsViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="IPc-Zu-IA3"/>
-                        <viewControllerLayoutGuide type="bottom" id="phh-YG-oCn"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Q0U-sS-6i4">
-                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="zRg-JO-xfh"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ivo-1L-Ncz" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-10896" y="-1562"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="i14-fI-hzu">
             <objects>
@@ -108,7 +90,6 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="6dv-4J-UJm" kind="relationship" relationship="viewControllers" id="krA-SA-Bzx"/>
                         <segue destination="thc-6S-ZOw" kind="relationship" relationship="viewControllers" id="CBl-fr-Ru5"/>
                     </connections>
                 </tabBarController>
@@ -157,7 +138,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="re8-w2-WrZ" style="IBUITableViewCellStyleDefault" id="M7v-VD-zTh">
-                                <rect key="frame" x="0.0" y="199" width="594" height="66"/>
+                                <rect key="frame" x="0.0" y="199" width="634" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="M7v-VD-zTh" id="DKD-B8-hOR">
                                     <rect key="frame" x="0.0" y="0.0" width="618" height="66"/>
