--- a/ForteTeeVee/Base.lproj/Main.storyboard
+++ b/ForteTeeVee/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s4d-yz-pkc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-13640" y="-1554"/>
+            <point key="canvasLocation" x="-13468" y="-2610"/>
         </scene>
         <!--Score Page View Controller-->
         <scene sceneID="e4m-32-76l">
@@ -202,6 +202,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uag-qj-xBq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-11107" y="-3779"/>
+        </scene>
+        <!--Search Results View Controller-->
+        <scene sceneID="o9n-22-3WX">
+            <objects>
+                <viewController storyboardIdentifier="SearchResultsViewController" id="Cra-ws-JVD" customClass="SearchResultsViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xag-AF-dba"/>
+                        <viewControllerLayoutGuide type="bottom" id="p6d-bb-dAG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Oll-50-1E2">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" indicatorStyle="black" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dCC-bh-sJ0">
+                                <rect key="frame" x="337" y="0.0" width="1245" height="1080"/>
+                                <inset key="scrollIndicatorInsets" minX="120" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tQ7-Gc-lSW">
+                                    <size key="itemSize" width="114" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScoreCell" id="Y5i-iT-E4k" customClass="ScoreCell" customModule="ForteTeeVee" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kX4-7I-KNv">
+                                                    <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="kX4-7I-KNv" firstAttribute="top" secondItem="Y5i-iT-E4k" secondAttribute="top" id="Dui-qU-1a0"/>
+                                            <constraint firstItem="kX4-7I-KNv" firstAttribute="leading" secondItem="Y5i-iT-E4k" secondAttribute="leading" id="hYW-E2-G2k"/>
+                                            <constraint firstAttribute="trailing" secondItem="kX4-7I-KNv" secondAttribute="trailing" id="n4p-Ve-oLj"/>
+                                            <constraint firstAttribute="bottom" secondItem="kX4-7I-KNv" secondAttribute="bottom" id="zGg-Tc-Pas"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="kX4-7I-KNv" id="RO8-zj-G5J"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="dCC-bh-sJ0" id="fCk-8G-D9f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nWy-Ws-dNl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-11182" y="-1366"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9zn-zt-HLm">
