--- a/ForteTeeVee/Base.lproj/Main.storyboard
+++ b/ForteTeeVee/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AS9-uQ-H5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7773" y="-1918"/>
+            <point key="canvasLocation" x="-5533" y="-4540"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="i14-fI-hzu">
@@ -91,11 +91,12 @@
                     </tabBar>
                     <connections>
                         <segue destination="thc-6S-ZOw" kind="relationship" relationship="viewControllers" id="CBl-fr-Ru5"/>
+                        <segue destination="kZ4-qB-Lr4" kind="relationship" relationship="viewControllers" id="AWt-w5-rX8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s4d-yz-pkc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-13468" y="-2610"/>
+            <point key="canvasLocation" x="-13540" y="-4770"/>
         </scene>
         <!--Score Page View Controller-->
         <scene sceneID="e4m-32-76l">
@@ -127,7 +128,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eOX-dS-WVu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-5701" y="-1940"/>
+            <point key="canvasLocation" x="-3477" y="-4524"/>
         </scene>
         <!--Timeline View Controller-->
         <scene sceneID="zJv-hl-XCs">
@@ -169,6 +170,135 @@
             </objects>
             <point key="canvasLocation" x="-8005" y="-4533"/>
         </scene>
+        <!--Composer Score View Collection Controller-->
+        <scene sceneID="Bav-Fk-5zi">
+            <objects>
+                <viewController storyboardIdentifier="ComposerScoreViewCollectionController" id="ufb-LD-BHj" customClass="ComposerScoreViewCollectionController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gmT-SG-DBK"/>
+                        <viewControllerLayoutGuide type="bottom" id="74E-lu-EmT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J8u-MC-xOH">
+                        <rect key="frame" x="0.0" y="0.0" width="1285" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" indicatorStyle="black" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XBS-cJ-J3t">
+                                <rect key="frame" x="20" y="0.0" width="1245" height="1080"/>
+                                <inset key="scrollIndicatorInsets" minX="120" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DQ5-3p-zH0">
+                                    <size key="itemSize" width="114" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ScoreCell" id="gZu-Co-zwB" customClass="ScoreCell" customModule="ForteTeeVee" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="145" width="114" height="160"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YvJ-nX-gkn">
+                                                    <rect key="frame" x="0.0" y="0.0" width="114" height="160"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="YvJ-nX-gkn" secondAttribute="trailing" id="Fbr-nj-dgb"/>
+                                            <constraint firstItem="YvJ-nX-gkn" firstAttribute="top" secondItem="gZu-Co-zwB" secondAttribute="top" id="KuE-wj-xxV"/>
+                                            <constraint firstItem="YvJ-nX-gkn" firstAttribute="leading" secondItem="gZu-Co-zwB" secondAttribute="leading" id="haG-5o-Efa"/>
+                                            <constraint firstAttribute="bottom" secondItem="YvJ-nX-gkn" secondAttribute="bottom" id="lyX-Aj-79q"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="YvJ-nX-gkn" id="Mgi-sH-HC8"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                    </view>
+                    <navigationItem key="navigationItem" id="KCY-RE-ms8"/>
+                    <connections>
+                        <outlet property="collectionViews" destination="XBS-cJ-J3t" id="WMk-Se-YIa"/>
+                        <segue destination="NQ9-Pq-V9P" kind="presentation" identifier="OpenScoreSegue" id="jdN-q8-dEq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wvo-FA-Xf3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7679.5" y="-5843"/>
+        </scene>
+        <!--Composer view controller-->
+        <scene sceneID="6lg-d4-XFV">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="A99-Zr-vPC" userLabel="Composer view controller" customClass="ComposerViewController" customModule="ForteTeeVee" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="40" sectionFooterHeight="40" id="tDH-hV-hgG">
+                        <rect key="frame" x="0.0" y="0.0" width="634" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="dab-tM-I59" style="IBUITableViewCellStyleDefault" id="lO9-Ma-XjS">
+                                <rect key="frame" x="0.0" y="199" width="594" height="66"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lO9-Ma-XjS" id="9vO-80-AUY">
+                                    <rect key="frame" x="0.0" y="0.0" width="618" height="66"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dab-tM-I59">
+                                            <rect key="frame" x="20" y="0.0" width="578" height="66"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="A99-Zr-vPC" id="jHu-pV-BPo"/>
+                            <outlet property="delegate" destination="A99-Zr-vPC" id="awI-DP-Cav"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="h7o-dW-tCy"/>
+                    <connections>
+                        <segue destination="Oug-mP-sTm" kind="showDetail" identifier="showDetail" id="XE8-uv-cy4"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QQc-Ht-Q4Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-8005" y="-7067"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qSe-bJ-ZEy">
+            <objects>
+                <navigationController id="wNR-5z-fzK" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0B7-if-TLx">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="A99-Zr-vPC" kind="relationship" relationship="rootViewController" id="p4O-Qe-Riu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w9O-ng-LNq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-9177" y="-7075"/>
+        </scene>
+        <!--Browse by composer-->
+        <scene sceneID="i3A-A1-QuZ">
+            <objects>
+                <splitViewController id="kZ4-qB-Lr4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Browse by composer" id="ebH-Dd-acF"/>
+                    <connections>
+                        <segue destination="wNR-5z-fzK" kind="relationship" relationship="masterViewController" id="yAm-Ja-gkR"/>
+                        <segue destination="Oug-mP-sTm" kind="relationship" relationship="detailViewController" id="hdV-CX-30b"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DTJ-3T-H6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-11107" y="-5843"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ncf-A9-Unp">
             <objects>
@@ -201,7 +331,7 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uag-qj-xBq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-11107" y="-3779"/>
+            <point key="canvasLocation" x="-11099" y="-3221"/>
         </scene>
         <!--Search Results View Controller-->
         <scene sceneID="o9n-22-3WX">
@@ -259,7 +389,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nWy-Ws-dNl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-11107" y="-1940"/>
+            <point key="canvasLocation" x="-11107" y="-1676"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9zn-zt-HLm">
@@ -279,12 +409,31 @@
             </objects>
             <point key="canvasLocation" x="-9196.5" y="-3221"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Z76-Cg-cO7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Oug-mP-sTm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uJh-sI-YO3">
+                        <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ufb-LD-BHj" kind="relationship" relationship="rootViewController" id="cdK-o1-HEO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uZ5-5s-7a4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-9191.5" y="-5851"/>
+        </scene>
     </scenes>
     <resources>
         <image name="score_placeholder" width="768" height="1004"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1o6-w4-3xJ"/>
-        <segue reference="jK1-aX-mSv"/>
+        <segue reference="XE8-uv-cy4"/>
+        <segue reference="z6V-ES-lvg"/>
+        <segue reference="jdN-q8-dEq"/>
     </inferredMetricsTieBreakers>
 </document>
